Fix button row in playground overflowing to right
Would cause tiny bit of empty space on the right of the page, slightly outside
the viewport.

--- a/src/styles/ide.css
+++ b/src/styles/ide.css
@@ -8,7 +8,12 @@
     margin-left: 1rem;
 }
 
-.IDE .pt-card {
+.Repl > .pt-card {
     font-family: Monospace;
     white-space: pre-line;
+}
+
+.IDE > .row {
+    margin-right: 0px;
+    margin-left: 0px;
 }
